<resources>
    <string name="app_name">RN密码工具</string>
    <string name="inputSeedA">请输入种子A</string>
    <string name="seedB">请输入种子B</string>
    <string name="inputLength">至少长度</string>
    <string name="tvHello">!欢迎使用密码生成功能!</string>
    <string name="clear">清空剪切板</string>
    <string name="cope">复制密码</string>
    <string name="shengCheng">生成密码</string>
    <string name="sNB40">数字</string>
    <string name="main_welcome">!欢迎!</string>
    <string name="start_g">生成密码</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>